# elf-loader-2

./: CMakeLists.txt
include/elf/: loader.h
src/: loader.c
